; ModuleID = '/home/carl/AnghaBench/ccv/lib/nnc/cmd/util/extr_ccv_nnc_util.c__ccv_nnc_set_bitmask.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/nnc/cmd/util/extr_ccv_nnc_util.c__ccv_nnc_set_bitmask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*, i32, i32*, i32)* @_ccv_nnc_set_bitmask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_ccv_nnc_set_bitmask(i32 %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  store i32 0, i32* %16, align 4
  store i32 0, i32* %17, align 4
  store i32 0, i32* %14, align 4
  br label %18

18:                                               ; preds = %73, %6
  %19 = load i32, i32* %14, align 4
  %20 = load i32, i32* %13, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %76

22:                                               ; preds = %18
  store i32 0, i32* %15, align 4
  br label %23

23:                                               ; preds = %43, %22
  %24 = load i32, i32* %15, align 4
  %25 = icmp slt i32 %24, 64
  br i1 %25, label %26, label %46

26:                                               ; preds = %23
  %27 = load i32*, i32** %12, align 8
  %28 = load i32, i32* %14, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %15, align 4
  %33 = shl i32 1, %32
  %34 = and i32 %31, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %41

36:                                               ; preds = %26
  %37 = load i32, i32* %16, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %36
  store i32 0, i32* %7, align 4
  br label %81

40:                                               ; preds = %36
  br label %42

41:                                               ; preds = %26
  br label %46

42:                                               ; preds = %40
  br label %43

43:                                               ; preds = %42
  %44 = load i32, i32* %15, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %15, align 4
  br label %23

46:                                               ; preds = %41, %23
  %47 = load i32, i32* %15, align 4
  %48 = load i32, i32* %17, align 4
  %49 = add nsw i32 %48, %47
  store i32 %49, i32* %17, align 4
  %50 = load i32, i32* %15, align 4
  %51 = icmp slt i32 %50, 64
  br i1 %51, label %52, label %53

52:                                               ; preds = %46
  store i32 1, i32* %16, align 4
  br label %53

53:                                               ; preds = %52, %46
  br label %54

54:                                               ; preds = %69, %53
  %55 = load i32, i32* %15, align 4
  %56 = icmp slt i32 %55, 64
  br i1 %56, label %57, label %72

57:                                               ; preds = %54
  %58 = load i32*, i32** %12, align 8
  %59 = load i32, i32* %14, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i32, i32* %58, i64 %60
  %62 = load i32, i32* %61, align 4
  %63 = load i32, i32* %15, align 4
  %64 = shl i32 1, %63
  %65 = and i32 %62, %64
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %68

67:                                               ; preds = %57
  store i32 0, i32* %7, align 4
  br label %81

68:                                               ; preds = %57
  br label %69

69:                                               ; preds = %68
  %70 = load i32, i32* %15, align 4
  %71 = add nsw i32 %70, 1
  store i32 %71, i32* %15, align 4
  br label %54

72:                                               ; preds = %54
  br label %73

73:                                               ; preds = %72
  %74 = load i32, i32* %14, align 4
  %75 = add nsw i32 %74, 1
  store i32 %75, i32* %14, align 4
  br label %18

76:                                               ; preds = %18
  %77 = load i32, i32* %9, align 4
  %78 = load i32, i32* %17, align 4
  %79 = icmp eq i32 %77, %78
  %80 = zext i1 %79 to i32
  store i32 %80, i32* %7, align 4
  br label %81

81:                                               ; preds = %76, %67, %39
  %82 = load i32, i32* %7, align 4
  ret i32 %82
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
